--- a/configs/xray.yaml
+++ b/configs/xray.yaml
@@ -5,25 +5,15 @@ trainer:
   log_dir: logs
 
 model:
-  name: efficientnet_b5
+  name: efficientnet_b3
   num_classes: 2
 
 dataset:
   name: CustomDatasetLoader
   root: data
-  batch_size: 2
+  batch_size: 4
   image_size: 512 
-  num_workers: 4
+  num_workers: 16
 
 optimizer:
-  name: TFRMSprop
-  lr: 0.0125
-  weight_decay: 0
-  rho: 0.9
-  eps: 1.e-3
-  momentum: 0.9
-  warmup: 200185
-
-scheduler:
-  name: ExponentialLR
-  gamma: 0.98738885893
+  name: Adam
