--- a/configs/xray.yaml
+++ b/configs/xray.yaml
@@ -5,15 +5,17 @@ trainer:
   log_dir: logs
 
 model:
-  name: efficientnet_b3
+  name: efficientnet_b0
   num_classes: 2
 
 dataset:
-  name: CustomDatasetLoader
+  name: XRayDatasetLoader
   root: data
-  batch_size: 4
-  image_size: 512 
-  num_workers: 16
+  batch_size: 1
+  label_smoothing: 0.01
+  mixup_prob: -1.0
+  image_size: 24
+  num_workers: 1
 
 optimizer:
   name: Adam
